# prog_ex_sols

./: .gitignore  configure
attic/gaigen2hp/: Makefile.am  Makefile.in
chap1/ex1/: Makefile.am  Makefile.in
chap10/ex1/: Makefile.am  Makefile.in
chap10/ex2/: Makefile.am  Makefile.in
chap10/ex3/: Makefile.am  Makefile.in
chap11/ex1/: Makefile.am  Makefile.in
chap11/ex2/: Makefile.am  Makefile.in
chap11/ex3/: Makefile.am  Makefile.in
chap11/ex4/: Makefile.am  Makefile.in
chap12/ex1/: Makefile.am  Makefile.in
chap12/ex2/: Makefile.am  Makefile.in
chap12/ex3/: Makefile.am  Makefile.in
chap13/ex2/: Makefile.am  Makefile.in
chap13/ex3/: Makefile.am  Makefile.in
chap13/ex4/: Makefile.am  Makefile.in
chap14/ex1/: Makefile.am  Makefile.in
chap14/ex2/: Makefile.am  Makefile.in
chap14/ex3/: Makefile.am  Makefile.in
chap14/ex4/: Makefile.am  Makefile.in
chap15/ex1/: Makefile.am  Makefile.in
chap15/ex2/: Makefile.am  Makefile.in
chap15/ex3/: Makefile.am  Makefile.in
chap16/ex1/: Makefile.am  Makefile.in
chap16/ex3/: Makefile.am  Makefile.in
chap16/ex4/: Makefile.am  Makefile.in
chap2/ex1/: Makefile.am  Makefile.in
chap2/ex2/: Makefile.am  Makefile.in
chap2/ex3/: Makefile.am  Makefile.in
chap3/ex1/: Makefile.am  Makefile.in
chap3/ex2/: Makefile.am  Makefile.in
chap3/ex3/: Makefile.am  Makefile.in
chap3/ex4/: Makefile.am  Makefile.in
chap4/ex1/: Makefile.am  Makefile.in
chap4/ex2/: Makefile.am  Makefile.in
chap4/ex3/: Makefile.am  Makefile.in
chap5/ex1/: Makefile.am  (+1 more)
vs.net/: chap10ex1.vcproj  chap14ex4.vcproj
(+35 files in other folders)
